--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "zf2",
         "zend framework 2"
     ],
-    "homepage": "https://github.com/RWOverdijk/SxMail",
+    "homepage": "https://github.com/SpoonX/SxMail",
     "authors": [
         {
             "name": "Wesley Overdijk",
