--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": ">=5.3.3",
         "zendframework/zend-view": "2.*",
         "zendframework/zend-modulemanager": "2.*",
-        "zendframework/zend-config": "2.*",
+        "zendframework/zend-config": "2.*"
     },
     "replace": {
         "rwoverdijk/sxmail": "*"
